fix: 6 weeks overflow

--- a/packages/ui/src/Calendar/components/CalendarTime.module.scss
+++ b/packages/ui/src/Calendar/components/CalendarTime.module.scss
@@ -1,6 +1,20 @@
 @use '../../../styles/constants' as c;
 @use '../../../styles/helpers' as h;
 
+/*
+ * Note:
+ * What's the motivation for statically settings the height of this particular element?
+ * We need to prevent the height of this element to expand the size of the calendar popper itself.
+ * There are basically 2 ways to do this:
+ * 1. Settings the height of the popper container
+ * 2. Settings the height of the element itself
+ *
+ * Even though I think option 1 is readable a bit better, there is this odd feature, where react-datepicker
+ * renders 6 weeks (rows) instead of 5 for some of the months. This expands the height by 1 week row,
+ * and would cause overflow in case of option 1.
+ * Therefore only option 2 is left.
+ */
+$calendarTimeHeight: 217px;
 // Note: Add padding in order to preserve button's outline
 $outlinePreservingPadding: c.$grid * 1.25;
 
@@ -8,7 +22,6 @@ $outlinePreservingPadding: c.$grid * 1.25;
   display: flex;
   flex-direction: column;
   align-items: flex-start;
-  height: 100%;
 
   .header {
     display: flex;
@@ -23,6 +36,7 @@ $outlinePreservingPadding: c.$grid * 1.25;
     flex-direction: column;
     overflow-y: scroll;
     padding: $outlinePreservingPadding;
+    height: $calendarTimeHeight;
 
     > .timePoint {
       color: c.$colorTextSubdued;
